--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,36 @@ body {
 .text-uppercase {
   text-transform: uppercase;
 }
+
+/*clases especificas*/
+
+li a {
+  color: inherit;  
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+  display: inline;
+  margin: 5px;
+}
+
+.logo-header {
+  width: 60%;
+}
+
+header {
+  position: relative;
+}
+
+nav {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
+.box-header {
+  display: inline-block;
+}
